# CSCC11-Network-Attack-Classification

./: .gitignore  README.md  data_processing.ipynb  feature_processing.ipynb  knn.ipynb  mitra.ipynb  mlp.ipynb  pyproject.toml  rf.ipynb  xgboost.ipynb
