[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.1",
    "datashader>=0.18.2",
    "holoviews>=1.22.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow==20.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "umap-learn>=0.5.9.post2",
    "autogluon.tabular[mitra]>=1.4.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
]

[project.optional-dependencies]
xgboost = [
    "xgboost>=3.1.2",
]
